# ispu-ivtf-poks

./: Default.prm  Информатика.docx  Культурология.docx  Программирование и основы алгорит.docx
1 курс/: Otchet_po_laboratornoy_rabote2.docx  Otchet_po_laboratornoy_rabote3.docx  ~$льтурология.docx  ~$форматика.docx  ~WRL2524.tmp  Информатика лаб1.docx  Информатика.docx  Компьютерная графика.txt  Культурология сем 5.docx  Культурология сем2.docx  Культурология сем3.docx  Культурология.docx  Основы экономики.docx  Отчет по лабораторной работе 4.docx  Патриотизм.docx  Персональные финансы.txt  Противодействие терр.docx  Чертеж1.dwg
1 курс/2 семестр/: Новый текстовый документ.txt  ОДК.txt  Программное обеспечение.txt
2 курс/: Схемотехника.txt
2 курс/Веб разработка/: Самостоятельные работы.rar
2 курс/Разработка требований/: Классификация методов оптимизации.pptx  Темы курсовых.docx  Турагентство.docx  Шаблон диаграммы Исикавы lifemotivation.ru(1).docx
3 курс/: Параллельное программирование.txt  Терроризм.txt
3 курс/Cracker/: Cracker.sln
3 курс/CudaRuntime1/: CudaRuntime1.sln
3 курс/asd/: CMakeLists.txt  main.cpp
3 курс/asd/lab1/: lab1.cpp  lab1.h
3 курс/asd/lab2/: lab2.cpp  lab2.h
3 курс/asd/lab3/: lab3.cpp  lab3.h
3 курс/asd/lab4/: lab4.cpp  lab4.h
3 курс/asd/pk1/findCyclesUtil/: findCyclesUtil.cpp  findCyclesUtil.h
3 курс/asd/pk1/ostov/: BFS.cpp  BFS.h  DFS.cpp  DFS.h
3 курс/asd/rle/: rle_proto.cpp  rle_proto.h
3 курс/asd/walk_down/: walk_down.cpp  walk_down.h
3 курс/parallel_programming/: CMakeLists.txt  main.cpp  result.txt  result5.txt
3 курс/parallel_programming/cuda/: lab3.cpp  lab3.h  lab3_cuda.cpp  lab4.cpp  lab4.h
3 курс/parallel_programming/lab1/: lab1.cpp  lab1.h
3 курс/parallel_programming/lab10/: lab10.cpp  lab10.h
3 курс/parallel_programming/lab2/: lab2.cpp  lab2.h
3 курс/parallel_programming/lab3/: lab3.cpp  lab3.h
3 курс/parallel_programming/lab4/: lab4.cpp  lab4.h
3 курс/parallel_programming/lab5/: lab5.cpp  lab5.h
3 курс/parallel_programming/lab7/: lab7.cpp  lab7.h  thread1.txt  thread2.txt  thread6.txt
3 курс/parallel_programming/lab8/: lab8.cpp  lab8.h  matrix-a.txt  matrix-b.txt  matrix-c.txt
3 курс/parallel_programming/lab9/: lab2_cuda.cpp  lab9.cpp  lab9.h
3 курс/parallel_programming/task1/: Bird-1_rank_2.txt  Bird-2_rank_3.txt  Bird-3_rank_4.txt  Bird-4_rank_5.txt  Dish_rank_0.txt  Mother_rank_1.txt  task1.cpp  task1.h
3 курс/parallel_programming/task2/: output.txt  task2.cpp  task2.h
3 курс/parallel_programming2/: CMakeLists.txt  openmpi_test.h   (+1 more)
(+290 files in other folders)
